--- a/quiz.html
+++ b/quiz.html
@@ -53,8 +53,8 @@
   </style>
 </head>
 <body>
-<div id="quiz-container">
-    <div class="quiz-card">
+  <div id="quiz-container">
+  <div class="quiz-card">
       <div class="quiz-question">
         BLA Insights Quiz: Test Your TN Political Knowledge!
       </div>
@@ -62,6 +62,8 @@
         Guess the relevant quote of the CM related to this surprise:
       </div>
     </div>
+  </div>
+<div id="quiz-container">
     <div class="quiz-option-card" onclick="selectAnswer(this, 'a')">a) ஒரு தாய் பிள்ளைகளாக இணைவோம்</div>
     <div class="quiz-option-card" onclick="selectAnswer(this, 'b')">b) They use spiritual cards for political gains</div>
     <div class="quiz-option-card" onclick="selectAnswer(this, 'c')">c) நாற்பதும் நமதே -நாடும் நமதே! களம் காண்போம்</div>
