--- a/quiz.html
+++ b/quiz.html
@@ -54,16 +54,15 @@
 </head>
 <body>
   
-<!--   <div class="quiz-card">
+  <div class="quiz-card">
       <div class="quiz-question">
         BLA Insights Quiz: Test Your TN Political Knowledge!
       </div>
       <div class="quiz-question">
         Guess the relevant quote of the CM related to this surprise:
       </div>
-    </div> -->
-<h2>BLA Insights Quiz: Test Your TN Political Knowledge!</h2>
-  <h2>>Guess the relevant quote of the CM related to this surprise:</h2
+    </div>
+
 <div id="quiz-container">
     <div class="quiz-option-card" onclick="selectAnswer(this, 'a')">a) ஒரு தாய் பிள்ளைகளாக இணைவோம்</div>
     <div class="quiz-option-card" onclick="selectAnswer(this, 'b')">b) They use spiritual cards for political gains</div>
