--- a/quiz.html
+++ b/quiz.html
@@ -11,9 +11,9 @@
       padding: 0;
       background-color: #f5f5f5;
       display: flex;
-/*       justify-content: center; */
-      align-items: center;
-      height: 100vh;
+     justify-content: center; 
+/*       align-items: center;*/
+      height: 100vh; 
     }
 
     /* Styling for the quiz container */
