--- a/quiz.html
+++ b/quiz.html
@@ -10,9 +10,9 @@
       margin: 0;
       padding: 0;
       background-color: #f5f5f5;
-      display: flex;
+/*       display: flex;
      justify-content: center; 
-/*       align-items: center;*/
+      align-items: center; */
       height: 100vh; 
     }
 
