--- a/quiz.html
+++ b/quiz.html
@@ -10,9 +10,6 @@
       margin: 0;
       padding: 0;
       background-color: #f5f5f5;
-/*       display: flex;
-     justify-content: center; 
-      align-items: center; */
       height: 100vh; 
     }
 
@@ -40,6 +37,8 @@
       font-size: 18px;
       font-weight: bold;
       color: #333;
+      padding: 15px; /* Add padding to the bottom of the text */
+
     }
 
     /* Styling for correct and incorrect answers */
