--- a/quiz.html
+++ b/quiz.html
@@ -44,7 +44,7 @@
       color: transparent;
     }
 
-    .quiz.heading{
+    .quiz-heading{
       font-size: 20px;
       font-weight: bold;
       color: #333;
