--- a/quiz.html
+++ b/quiz.html
@@ -66,7 +66,7 @@
   
   <div class="quiz-card">
       <div class="quiz-heading">
-        BLA Insights Quiz: Test Your TN Political Knowledge!
+        Test Your TN Political Knowledge!
       </div>
       <div class="quiz-question">
         Guess the relevant quote of the CM related to this surprise:
