--- a/timer.html
+++ b/timer.html
@@ -56,7 +56,7 @@
         // Redirect to the specified link after the timer is over
         window.location.href = "https://artistic-elegance.my.canva.site/bla2eventwebsite";
       } else {
-        const hours = Math.floor((timeRemaining / (1000 * 60 * 60)) % 24);
+        const hours = Math.floor((timeRemaining / (1000 * 60 * 60)));
         const minutes = Math.floor((timeRemaining / (1000 * 60)) % 60);
         const seconds = Math.floor((timeRemaining / 1000) % 60);
 
