--- a/quiz.html
+++ b/quiz.html
@@ -64,14 +64,26 @@
 </head>
 <body>
   
-  <div class="quiz-card">
+<!--   <div class="quiz-card">
       <div class="quiz-heading">
-        Test Your TN Political Knowledge!
+        Test Your TN Political Knowledge to reveal the Surp
+        <div class="quiz-question">
+          R
+        </div>
+        <div class="quiz-heading">
+          ise!
+        </div>
       </div>
       <div class="quiz-question">
         Guess the relevant quote of the CM related to this surprise:
       </div>
-    </div>
+    </div> -->
+
+
+<div class="quiz-card"><div class="quiz-heading">Test Your TN Political Knowledge to reveal the Surp<div class="quiz-question">R</div><div class="quiz-heading">ise!</div></div></div>
+<div class="quiz-question">Guess the relevant quote of the CM related to this surprise:</div>
+</div>
+
 
 <div id="quiz-container">
     <div class="quiz-option-card" onclick="selectAnswer(this, 'a')">a) ஒரு தாய் பிள்ளைகளாக இணைவோம்</div>
