--- a/quiz.html
+++ b/quiz.html
@@ -61,6 +61,15 @@
       background-color: red;
     }
   </style>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-FHWPEV79YN"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-FHWPEV79YN');
+  </script>
+
+  
 </head>
 <body>
   
