--- a/timer.html
+++ b/timer.html
@@ -54,7 +54,7 @@
 
       if (timeRemaining <= 0) {
         // Redirect to the specified link after the timer is over
-        window.location.href = "https://artistic-elegance.my.canva.site/bla2eventwebsite";
+        window.location.href = "https://form-timer.com/start/7a0d5b5d";
       } else {
         const hours = Math.floor((timeRemaining / (1000 * 60 * 60)));
         const minutes = Math.floor((timeRemaining / (1000 * 60)) % 60);
